--- a/sass/blocks/cards/_collection-card.scss
+++ b/sass/blocks/cards/_collection-card.scss
@@ -15,6 +15,11 @@
 		height: 200px;
 	}
 
+	/* Mobile */
+	@media (max-width: 767px) {
+		width: 100%;
+	}
+
 	img {
 		position: absolute;
 		left: 0;
