--- a/sass/blocks/cards/_auto-card.scss
+++ b/sass/blocks/cards/_auto-card.scss
@@ -1,6 +1,6 @@
 .auto-card {
 	position: relative;
-	padding: 25px;
+	padding: 24px;
 	width: calc((1400px - 2 * 30px) / 3);
 	border: 1px solid #E1E1E1;
 	border-radius: 25px;
@@ -14,6 +14,11 @@
 		width: calc((708px - 14px) / 2);
 		background-size: 290px 171px;
 		background-position: top 61px right 0;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		width: 100%;
 	}
 
 	&::after {
@@ -34,6 +39,14 @@
 			width: 181px;
 			height: 101px;
 		}
+
+		/* Mobile */
+		@media (max-width: 767px) {
+			top: 108px;
+			right: 20px;
+			width: 153px;
+			height: 85px;
+		}
 	}
 }
 
@@ -47,7 +60,7 @@
 	justify-content: space-between;
 	align-items: flex-start;
 	column-gap: 20px;
-	margin-bottom: 20px;
+	margin-bottom: 12px;
 
 	/* Tablet */
 	@media (max-width: 1429px) {
@@ -179,7 +192,7 @@
 		padding-left: 41px;
 		max-width: 140px;
 		font-size: 13px;
-		line-height: 1.15;
+		line-height: 1.2;
 
 		/* Tablet */
 		@media (max-width: 1429px) {
@@ -240,7 +253,7 @@
 
 	.auto-card__loan {
 		font-size: 16px;
-		line-height: 1;
+		line-height: 1.4;
 
 		/* Tablet */
 		@media (max-width: 1429px) {
@@ -268,13 +281,18 @@
 		margin-bottom: 16px;
 	}
 
+	/* Mobile */
+	@media (max-width: 767px) {
+		column-gap: 2px;
+	}
+
 	li {
 		display: flex;
 		align-items: center;
 		justify-content: flex-start;
-		column-gap: 4px;
-		padding-left: 8px;
-		padding-right: 8px;
+		column-gap: 2px;
+		padding-left: 9px;
+		padding-right: 9px;
 		width: calc((100% - 21px) / 4);
 		height: 31px;
 		border-radius: 16px;
@@ -291,6 +309,13 @@
 				width: auto;
 				object-fit: contain;
 			}
+		}
+
+		/* Mobile */
+		@media (max-width: 767px) {
+			padding-left: 4px;
+			padding-right: 4px;
+			width: calc((100% - 6px) / 4);
 		}
 	}
 }
@@ -357,6 +382,11 @@
 			width: calc(158px - 18px);
 		}
 
+		/* Mobile */
+		@media (max-width: 767px) {
+			width: calc(130px - 18px);
+		}
+
 		svg {
 			position: absolute;
 			right: -18px;
@@ -388,6 +418,11 @@
 			right: 18px;
 			top: 58px;
 			width: calc(168px - 18px);
+		}
+
+		/* Mobile */
+		@media (max-width: 767px) {
+			width: calc(143px - 18px);
 		}
 
 		svg {
