--- a/sass/blocks/cards/_review-card.scss
+++ b/sass/blocks/cards/_review-card.scss
@@ -5,6 +5,11 @@
 	@media (max-width: 1429px) {
 		width: calc((100% - 14px) / 2);
 	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		width: 100%;
+	}
 }
 
 .review-card__video {
@@ -78,7 +83,7 @@
 }
 
 .review-card__text {
-	margin-bottom: 15px;
+	margin-bottom: 14px;
 	font-size: 16px;
 	line-height: 1.5;
 	color: $gray-color;
