--- a/sass/blocks/forms/_credit-calc.scss
+++ b/sass/blocks/forms/_credit-calc.scss
@@ -17,7 +17,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin-bottom: 25px;
+	margin-bottom: 23px;
 	padding: 23px;
 	background: rgba(194, 194, 196, 0.5);
 	border-radius: 25px;
@@ -32,16 +32,31 @@
 	& .dropdown {
 		width: calc((100% - 36px) / 3);
 	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		flex-direction: column;
+		row-gap: 10px;
+
+		& .dropdown {
+			width: 100%;
+		}
+	}
 }
 
 .credit-calc__row {
 	display: flex;
 	justify-content: space-between;
-	align-items: flex-end;
+	align-items: flex-start;
 	column-gap: 52px;
 
 	@media (max-width: 1899px) {
 		column-gap: 28px;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		flex-direction: column;
 	}
 }
 
@@ -57,20 +72,21 @@
 	@media (max-width: 1429px) {
 		width: 250px;
 	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		width: 100%;
+	}
 }
 
 .credit-calc__img {
-	margin-bottom: 25px;
+	margin-bottom: 23px;
 	width: 100%;
 
 	img {
 		width: 100%;
 		height: 243px;
 		object-fit: cover;
-
-		@media (max-width: 1899px) {
-			height: 229px;
-		}
 
 		/* Tablet */
 		@media (max-width: 1429px) {
@@ -90,7 +106,7 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		margin-bottom: 18px;
+		margin-bottom: 15px;
 
 		span {
 			display: inline-block;
@@ -117,7 +133,6 @@
 		justify-content: space-between;
 		align-items: flex-start;
 		margin-top: 10px;
-		padding-bottom: 14px;
 
 		span {
 			font-size: 16px;
@@ -142,14 +157,20 @@
 	@media (max-width: 1429px) {
 		width: 310px;
 	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		width: 100%;
+	}
 }
 
 .credit-calc__inputs {
 	display: flex;
 	flex-direction: column;
 	row-gap: 34px;
+	padding-top: 20px;
 	width: 100%;
-	margin-bottom: 25px;
+	margin-bottom: 63px;
 }
 
 .credit-calc__fee {
