--- a/sass/blocks/forms/_credit-offer.scss
+++ b/sass/blocks/forms/_credit-offer.scss
@@ -37,7 +37,7 @@
 	display: flex;
 	flex-direction: column;
 	row-gap: 10px;
-	margin-bottom: 26px;
+	margin-bottom: 23px;
 
 	/* Tablet */
 	@media (max-width: 1429px) {
@@ -53,6 +53,15 @@
 		.button {
 			font-size: 16px;
 			line-height: 1.17;
+		}
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		flex-direction: column;
+
+		&>.credit-offer__row{
+			width: 100%;
 		}
 	}
 }
