--- a/sass/blocks/forms/_select-form.scss
+++ b/sass/blocks/forms/_select-form.scss
@@ -9,6 +9,7 @@
 
 .select-form__title {
 	margin-bottom: 22px;
+	padding-top: 5px;
 }
 
 .select-form__range {
@@ -23,6 +24,12 @@
 	@media (max-width: 1429px) {
 		flex-direction: row;
 		column-gap: 10px;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		flex-direction: column;
+		row-gap: 10px;
 	}
 }
 
@@ -39,12 +46,25 @@
 		width: calc((100% - 2 * 10px) / 3 * 2 + 10px);
 	}
 
+	/* Mobile */
+	@media (max-width: 767px) {
+		flex-direction: column;
+		row-gap: 10px;
+		width: 100%;
+		margin-bottom: 0;
+	}
+
 	>.dropdown {
 		width: calc((100% - 15px) / 2);
 
 		/* Tablet */
 		@media (max-width: 1429px) {
 			width: calc((100% - 10px) / 2);
+		}
+
+		/* Mobile */
+		@media (max-width: 767px) {
+			width: 100%;
 		}
 	}
 }
@@ -54,5 +74,10 @@
 	/* Tablet */
 	@media (max-width: 1429px) {
 		width: calc((100% - 2 * 10px) / 3);
+	}
+	
+	/* Mobile */
+	@media (max-width: 767px) {
+		width: 100%;
 	}
 }
