--- a/sass/sections/_section-about.scss
+++ b/sass/sections/_section-about.scss
@@ -1,15 +1,15 @@
 .section-about {
-	padding-top: 110px;
+	padding-top: 96px;
 	text-align: center;
 }
 
 .section-about__title {
-	margin-bottom: 30px;
+	margin-bottom: 18px;
 }
 
 .section-about__text {
 	display: inline-block;
-	margin-bottom: 43px;
+	margin-bottom: 48px;
 	max-width: 924px;
 	font-size: 16px;
 	line-height: 1.6;
@@ -19,9 +19,27 @@
 .section-about__video {
 	position: relative;
 
+	/* Mobile */
+	@media (max-width: 767px) {
+		border-radius: 25px;
+		overflow: hidden;
+	}
+
 	video {
-		width: 708px;
-		height: 452px;
+		width: 924px;
+		height: 573px;
 		object-fit: cover;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			width: 708px;
+			height: 452px;
+		}
+
+		/* Mobile */
+		@media (max-width: 767px) {
+			width: 290px;
+			height: 185px;
+		}
 	}
 }
