--- a/sass/sections/_section-collections.scss
+++ b/sass/sections/_section-collections.scss
@@ -1,5 +1,5 @@
 .section-collections {
-	padding-top: 70px;
+	padding-top: 72px;
 
 	/* Tablet */
 	@media (max-width: 1429px) {
@@ -18,5 +18,13 @@
 	@media (max-width: 1429px) {
 		justify-content: space-between;
 		margin-bottom: 25px;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: unset;
+		row-gap: 10px;
 	}
 }
