--- a/sass/sections/_section-cta.scss
+++ b/sass/sections/_section-cta.scss
@@ -15,6 +15,11 @@
 		padding: 33px 62px 38px 300px;
 	}
 
+	/* Mobile */
+	@media (max-width: 767px) {
+		padding: 210px 20px 30px;
+	}
+
 	&:before {
 		content: "";
 		position: absolute;
@@ -32,6 +37,15 @@
 			transform: translateY(-50%);
 			width: 430px;
 			height: 155px;
+		}
+
+		/* Mobile */
+		@media (max-width: 767px) {
+			top: 94px;
+			left: -36px;
+			width: 251px;
+			height: 134px;
+			transform: unset;
 		}
 	}
 
@@ -51,6 +65,15 @@
 			height: 227px;
 			background-size: 336px 227px;
 		}
+
+		/* Mobile */
+		@media (max-width: 767px) {
+			top: 13px;
+			transform: unset;
+			width: 290px;
+			height: 195px;
+			background-size: 290px 195px;
+		}
 	}
 }
 
@@ -61,7 +84,7 @@
 }
 
 .cta-form__title {
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	font-weight: 900;
 	font-size: 30px;
 	line-height: 1.17;
@@ -74,7 +97,7 @@
 }
 
 .cta-form__subtitle {
-	margin-bottom: 30px;
+	margin-bottom: 33px;
 	font-size: 20px;
 	line-height: 1.15;
 
@@ -95,7 +118,7 @@
 	justify-content: space-between;
 	align-items: center;
 	column-gap: 38px;
-	margin-bottom: 22px;
+	margin-bottom: 23px;
 
 	/* Tablet */
 	@media (max-width: 1429px) {
