--- a/sass/sections/_section-map.scss
+++ b/sass/sections/_section-map.scss
@@ -1,10 +1,21 @@
 .section-map {
 	padding-top: 105px;
 	margin-bottom: -100px;
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		margin-bottom: 0;
+		padding-bottom: 30px;
+	}
 }
 
-#map {
+.map {
 	position: relative;
+}
+
+.map__frame {
+	position: relative;
+	margin-bottom: -20px;
 	width: 100%;
 	height: 100%;
 	border-radius: 25px;
@@ -12,6 +23,11 @@
 
 	iframe {
 		width: calc(100%);
+
+		/* Mobile */
+		@media (max-width: 767px) {
+			height: 386px;
+		}
 	}
 }
 
@@ -20,7 +36,7 @@
 	top: 50%;
 	right: 235px;
 	transform: translateY(calc(-50% - 50px));
-	padding: 40px 30px;
+	padding: 38px 29px 25px;
 	width: 400px;
 	border-radius: 15px;
 	background-color: #FFF;
@@ -32,11 +48,22 @@
 		width: 290px;
 		right: 45px;
 	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		position: relative;
+		top: unset;
+		right: unset;
+		transform: unset;
+		box-shadow: 0px 0px 30px rgba(38, 38, 38, 0.15);
+		z-index: 9;
+	}
 }
 
 .map-info__content {
 	font-size: 16px;
 	line-height: 1.19;
+	margin-bottom: 27px;
 
 	/* Tablet */
 	@media (max-width: 1429px) {
@@ -48,7 +75,10 @@
 		display: flex;
 		align-items: flex-start;
 		column-gap: 12px;
-		margin-bottom: 12px;
+
+		&:not(:last-child){
+			margin-bottom: 16px;
+		}
 	}
 }
 
