--- a/sass/sections/_section-reviews.scss
+++ b/sass/sections/_section-reviews.scss
@@ -3,7 +3,7 @@
 }
 
 .section-reviews__title {
-	margin-bottom: 45px;
+	margin-bottom: 44px;
 }
 
 .section-reviews__cards {
@@ -15,6 +15,14 @@
 
 		/* Tablet */
 		@media (max-width: 1429px) {
+			display: none;
+		}
+	}
+
+	&>*:not(:first-child) {
+
+		/* Mobile */
+		@media (max-width: 767px) {
 			display: none;
 		}
 	}
