--- a/sass/sections/_section-tabs.scss
+++ b/sass/sections/_section-tabs.scss
@@ -1,15 +1,22 @@
 .section-tabs {
-	padding-top: 110px;
+	padding-top: 115px;
 }
 
 .section-tabs__list {
 	display: flex;
 	align-items: center;
 	column-gap: 53px;
-	margin-bottom: 70px;
+	margin-bottom: 52px;
+	padding-bottom: 18px;
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.19;
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		column-gap: 25px;
+		border-bottom: 1px solid #C2C2C4;
+	}
 
 	li[data-tab] {
 		position: relative;
@@ -24,7 +31,7 @@
 				content: "";
 				position: absolute;
 				left: 0;
-				bottom: -20px;
+				bottom: -22px;
 				width: 100%;
 				height: 3px;
 				background-color: $accent-color;
