--- a/sass/sections/header/_header-middle.scss
+++ b/sass/sections/header/_header-middle.scss
@@ -64,6 +64,11 @@
 	justify-content: space-between;
 	align-items: center;
 	column-gap: 20px;
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		display: none;
+	}
 }
 
 .header-middle__phones {
