--- a/sass/blocks/cards/_rating-cards.scss
+++ b/sass/blocks/cards/_rating-cards.scss
@@ -8,12 +8,10 @@
 	background: #FFF;
 	box-shadow: 0px 0px 15px rgba(38, 38, 38, 0.15);
 
+	/* Tablet */
 	@media (max-width: 1429px) {
-		width: calc((100% - 30px) / 2);
-	}
-
-	/* Mobile */
-	@media (max-width: 767px) {
+		row-gap: 20px;
+		padding: 18px 20px 15px;
 		width: 100%;
 	}
 }
@@ -23,11 +21,23 @@
 	font-weight: 900;
 	font-size: 20px;
 	line-height: 1.15;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 3px;
+		font-size: 16px;
+	}
 }
 
 .rating-site-card__link {
+	display: block;
 	font-size: 18px;
 	line-height: 1.17;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 14px;
+	}
 }
 
 a.rating-site-card__link,
@@ -46,6 +56,23 @@ a.rating-map-card__link {
 	display: flex;
 	align-items: center;
 	column-gap: 25px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		column-gap: 30px;
+	}
+
+	.rating-text {
+		display: inline-block;
+		font-size: 14px;
+		line-height: 1.14;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			min-width: 90px;
+			font-size: 10px;
+		}
+	}
 }
 
 .rating-map-card {
@@ -63,7 +90,7 @@ a.rating-map-card__link {
 		flex-direction: column;
 		align-items: flex-start;
 		justify-content: unset;
-		padding: 20px;
+		padding: 20px 20px 18px;
 		width: calc((100% - 14px) / 2);
 	}
 
@@ -78,12 +105,18 @@ a.rating-map-card__link {
 
 	/* Tablet */
 	@media (max-width: 1429px) {
+		width: 100%;
 		margin-bottom: 25px;
 	}
 }
 
 .rating-map-card__logo {
 	margin-bottom: 5px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 3px;
+	}
 }
 
 .rating-map-card__link {
@@ -102,6 +135,7 @@ a.rating-map-card__link {
 	/* Tablet */
 	@media (max-width: 1429px) {
 		justify-content: space-between;
+		width: 100%;
 	}
 }
 
@@ -110,12 +144,17 @@ a.rating-map-card__link {
 	flex-direction: column;
 	align-items: center;
 	row-gap: 12px;
-}
 
-.rating-text {
-	display: inline-block;
-	font-size: 14px;
-	line-height: 1.14;
+	/* Tablet */
+	@media (max-width: 1429px) {
+		align-items: flex-start;
+	}
+
+	.rating-text {
+		display: inline-block;
+		font-size: 14px;
+		line-height: 1.14;
+	}
 }
 
 .rating-stars {
