--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -3,4 +3,10 @@
 	height: 4px;
 	border-radius: 2px;
 	background-color: $black-color;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 20px;
+		height: 2px;
+	}
 }
