--- a/sass/blocks/_nav-icon.scss
+++ b/sass/blocks/_nav-icon.scss
@@ -2,8 +2,8 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 28px;
-	height: 22px;
+	width: 20px;
+	height: 15px;
 	cursor: pointer;
 
 	.nav-icon__stripe {
@@ -22,10 +22,20 @@
 
 		&::before {
 			top: -10px;
+
+			/* Tablet */
+			@media (max-width: 1429px) {
+				top: -7px;
+			}
 		}
 
 		&::after {
 			top: 10px;
+
+			/* Tablet */
+			@media (max-width: 1429px) {
+				top: 7px;
+			}
 		}
 	}
 
