--- a/sass/blocks/_titles.scss
+++ b/sass/blocks/_titles.scss
@@ -31,9 +31,10 @@
 	font-size: 24px;
 	line-height: 1.17;
 
-	/* Mobile */
-	@media (max-width: 767px) {
+	/* Tablet */
+	@media (max-width: 1429px) {
 		font-size: 20px;
+		line-height: 1.15;
 	}
 }
 
