--- a/sass/blocks/cards/_bank-card.scss
+++ b/sass/blocks/cards/_bank-card.scss
@@ -7,14 +7,14 @@
 
 	/* Tablet */
 	@media (max-width: 1429px) {
-		padding: 15px;
-		width: calc((708px - 2 * 14px) / 3);
-		height: 92px;
+		padding: 10px 32px;
+		width: 166px;
+		height: 57px;
 	}
 
 	/* Mobile */
 	@media (max-width: 767px) {
-		width: calc(100% - 10px);
+		width: 100%;
 		height: 57px;
 	}
 
@@ -24,6 +24,3 @@
 		object-fit: contain;
 	}
 }
-
-
-
