--- a/sass/blocks/cards/_blog-card.scss
+++ b/sass/blocks/cards/_blog-card.scss
@@ -1,5 +1,10 @@
 .blog-card {
-	width: 328px;
+	width: calc((100% - 3 * 30px) / 4);
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 100%;	
+	}
 
 	/* Mobile */
 	@media (max-width: 767px) {
@@ -12,10 +17,20 @@
 	border-radius: 25px;
 	overflow: hidden;
 
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 19px;
+	}
+
 	img {
 		width: 100%;
 		height: 202px;
 		object-fit: cover;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			height: 185px;
+		}
 	}
 }
 
@@ -24,13 +39,23 @@
 	font-size: 14px;
 	line-height: 1.14;
 	color: #ADADB0;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 12px;
+	}
 }
 
 .blog-card__title {
-	max-width: 90%;
+	max-width: 85%;
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.19;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 14px;
+	}
 
 	&:hover,
 	&:active {
