--- a/sass/blocks/forms/_credit-calc.scss
+++ b/sass/blocks/forms/_credit-calc.scss
@@ -8,8 +8,13 @@
 	/* Tablet */
 	@media (max-width: 1429px) {
 		width: 100%;
-		padding-bottom: 43px;
+		padding-bottom: 35px;
 		border-bottom: 1px solid #E1E1E1;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		padding-bottom: 22px;
 	}
 }
 
@@ -25,20 +30,33 @@
 	/* Tablet */
 	@media (max-width: 1429px) {
 		column-gap: 10px;
+		margin-bottom: 31px;
 		padding: 0;
 		background-color: transparent;
-	}
-
-	& .dropdown {
-		width: calc((100% - 36px) / 3);
 	}
 
 	/* Mobile */
 	@media (max-width: 767px) {
 		flex-direction: column;
 		row-gap: 10px;
+	}
 
-		& .dropdown {
+	& .dropdown {
+		width: calc((100% - 36px) / 3);
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			width: calc((100% - 20px) / 3);
+
+			& .dropdown__button {
+				padding-left: 15px;
+				padding-right: 30px;
+				height: 65px;
+			}
+		}
+
+		/* Mobile */
+		@media (max-width: 767px) {
 			width: 100%;
 		}
 	}
@@ -83,6 +101,16 @@
 	margin-bottom: 23px;
 	width: 100%;
 
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 73px;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		margin-bottom: 68px;
+	}
+
 	img {
 		width: 100%;
 		height: 243px;
@@ -97,6 +125,12 @@
 
 .credit-calc__progress-bar {
 	width: 100%;
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		padding-bottom: 25px;
+		border-bottom: 1px solid #E1E1E1;
+	}
 
 	.progress-bar {
 		width: 100%;
@@ -139,6 +173,11 @@
 			line-height: 1.19;
 			color: #ADADB0;
 
+			/* Tablet */
+			@media (max-width: 1429px) {
+				font-size: 12px;
+			}
+
 			&:first-child {
 				text-align-last: left;
 			}
@@ -160,6 +199,7 @@
 
 	/* Mobile */
 	@media (max-width: 767px) {
+		padding-top: 22px;
 		width: 100%;
 	}
 }
@@ -168,9 +208,21 @@
 	display: flex;
 	flex-direction: column;
 	row-gap: 34px;
+	margin-bottom: 63px;
 	padding-top: 20px;
 	width: 100%;
-	margin-bottom: 63px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 40px;
+		padding-top: 0;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		row-gap: 26px;
+		margin-bottom: 14px;
+	}
 }
 
 .credit-calc__fee {
@@ -180,13 +232,13 @@
 	width: 100%;
 
 	label {
-		max-width: 150px;
+		width: 150px;
 		font-size: 16px;
 		line-height: 1.19;
 
 		/* Tablet */
 		@media (max-width: 1429px) {
-			max-width: 119px;
+			width: 119px;
 			font-size: 14px;
 		}
 	}
@@ -197,6 +249,11 @@
 		/* Tablet */
 		@media (max-width: 1429px) {
 			width: 183px;
+		}
+
+		/* Mobile */
+		@media (max-width: 767px) {
+			width: 123px;
 		}
 	}
 }
