--- a/sass/blocks/forms/_select-form.scss
+++ b/sass/blocks/forms/_select-form.scss
@@ -10,10 +10,26 @@
 .select-form__title {
 	margin-bottom: 22px;
 	padding-top: 5px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 0;
+		margin-bottom: 15px;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		margin-bottom: 20px;
+	}
 }
 
 .select-form__range {
 	margin-bottom: 20px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 24px;
+	}
 }
 
 .select-form__group {
@@ -43,6 +59,7 @@
 	/* Tablet */
 	@media (max-width: 1429px) {
 		column-gap: 10px;
+		margin-bottom: 0;
 		width: calc((100% - 2 * 10px) / 3 * 2 + 10px);
 	}
 
@@ -75,7 +92,7 @@
 	@media (max-width: 1429px) {
 		width: calc((100% - 2 * 10px) / 3);
 	}
-	
+
 	/* Mobile */
 	@media (max-width: 767px) {
 		width: 100%;
