--- a/sass/sections/_section-about.scss
+++ b/sass/sections/_section-about.scss
@@ -1,10 +1,21 @@
 .section-about {
 	padding-top: 96px;
 	text-align: center;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 40px;
+		text-align: left;
+	}
 }
 
 .section-about__title {
 	margin-bottom: 18px;
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		margin-bottom: 20px;
+	}
 }
 
 .section-about__text {
@@ -14,13 +25,25 @@
 	font-size: 16px;
 	line-height: 1.6;
 	color: $gray-color;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 31px;
+		font-size: 14px;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		margin-bottom: 17px;
+		line-height: 1.5;
+	}
 }
 
 .section-about__video {
 	position: relative;
 
-	/* Mobile */
-	@media (max-width: 767px) {
+	/* Tablet */
+	@media (max-width: 1429px) {
 		border-radius: 25px;
 		overflow: hidden;
 	}
