--- a/sass/sections/_section-blog.scss
+++ b/sass/sections/_section-blog.scss
@@ -1,5 +1,10 @@
 .section-blog {
 	padding-top: 110px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 35px;
+	}
 }
 
 .section-blog__title {
@@ -7,4 +12,28 @@
 	align-items: center;
 	column-gap: 25px;
 	margin-bottom: 51px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		justify-content: space-between;
+		margin-bottom: 25px;
+
+		& .badge-button {
+			padding-left: 14px;
+			padding-right: 14px;
+		}
+	}
+}
+
+.section-blog__cards {
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		transform: translateX(-20px);
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		transform: translateX(-10px);
+	}
 }
