--- a/sass/sections/_section-ratings.scss
+++ b/sass/sections/_section-ratings.scss
@@ -1,9 +1,19 @@
 .section-ratings {
 	padding-top: 110px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 40px;
+	}
 }
 
 .section-ratings__title {
 	margin-bottom: 40px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 25px;
+	}
 }
 
 .section-ratings__site-cards {
@@ -12,6 +22,12 @@
 	/* Tablet */
 	@media (max-width: 1429px) {
 		margin-bottom: 20px;
+		transform: translateX(-20px);
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		transform: translateX(-10px);
 	}
 
 	.owl-carousel .owl-stage-outer {
@@ -24,11 +40,11 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	flex-wrap: wrap;
 	row-gap: 10px;
 
 	/* Mobile */
 	@media (max-width: 767px) {
 		flex-direction: column;
+		row-gap: 20px;
 	}
 }
