--- a/sass/sections/_section-select.scss
+++ b/sass/sections/_section-select.scss
@@ -3,7 +3,12 @@
 
 	/* Tablet */
 	@media (max-width: 1429px) {
-		padding-top: 28px;
+		padding-top: 34px;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		padding-top: 27px;
 	}
 }
 
@@ -14,7 +19,7 @@
 
 	/* Tablet */
 	@media (max-width: 1429px) {
-		padding: 35px;
+		padding: 38px 35px 35px;
 	}
 
 	/* Mobile */
