--- a/sass/sections/_section-stock.scss
+++ b/sass/sections/_section-stock.scss
@@ -1,5 +1,10 @@
 .section-stock {
 	padding-top: 55px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 40px;
+	}
 }
 
 .section-stock__title {
@@ -9,6 +14,7 @@
 	/* Tablet */
 	@media (max-width: 1429px) {
 		margin-bottom: 25px;
+		text-align: left;
 	}
 }
 
@@ -17,21 +23,28 @@
 	flex-wrap: wrap;
 	column-gap: 30px;
 	row-gap: 30px;
-	margin-bottom: 30px;
 
 	/* Tablet */
 	@media (max-width: 1429px) {
 		column-gap: 14px;
 		row-gap: 14px;
+		transform: translateX(-20px);
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		transform: translateX(-10px);
 	}
 }
 
 .section-stock__button {
 	width: 312px;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30px;
 
-	/* Mobile */
-	@media (max-width: 767px) {
-		display: none;
+	/* Tablet */
+	@media (max-width: 1429px) {
+		display: none;	
 	}
 }
