--- a/sass/sections/_section-tabs.scss
+++ b/sass/sections/_section-tabs.scss
@@ -1,5 +1,11 @@
 .section-tabs {
 	padding-top: 115px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 36px;
+		padding-bottom: 41px;
+	}
 }
 
 .section-tabs__list {
@@ -12,10 +18,13 @@
 	font-size: 16px;
 	line-height: 1.19;
 
-	/* Mobile */
-	@media (max-width: 767px) {
+	/* Tablet */
+	@media (max-width: 1429px) {
 		column-gap: 25px;
+		margin-bottom: 32px;
+		padding-bottom: 11px;
 		border-bottom: 1px solid #C2C2C4;
+		font-size: 14px;
 	}
 
 	li[data-tab] {
@@ -35,6 +44,11 @@
 				width: 100%;
 				height: 3px;
 				background-color: $accent-color;
+
+				/* Tablet */
+				@media (max-width: 1429px) {
+					bottom: -12px;
+				}
 			}
 		}
 	}
@@ -44,12 +58,22 @@
 
 .section-tabs__item-title {
 	margin-bottom: 20px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		margin-bottom: 15px;
+	}
 }
 
 .section-tabs__item-text {
 	font-size: 16px;
 	line-height: 1.5;
 	color: $gray-color;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		font-size: 14px;
+	}
 
 	p+p {
 		margin-top: 10px;
