--- a/sass/sections/header/_header-middle.scss
+++ b/sass/sections/header/_header-middle.scss
@@ -1,6 +1,18 @@
 .header-middle {
 	padding-top: 22px;
 	padding-bottom: 13px;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		padding-top: 12px;
+		padding-bottom: 12px;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		padding-top: 9px;
+		padding-bottom: 11px;
+	}
 }
 
 .header-middle__row {
@@ -14,12 +26,23 @@
 	justify-content: space-between;
 	align-items: center;
 	column-gap: 20px;
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		column-gap: 14px;
+	}
 }
 
-.header-middle__logo {
+.header-middle__logo svg {
 	width: 198px;
 	height: 58px;
-	object-fit: cover;
+	object-fit: contain;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 127px;
+		height: 37px;
+	}
 }
 
 .header-middle__slogan {
@@ -65,15 +88,20 @@
 	align-items: center;
 	column-gap: 20px;
 
-	/* Mobile */
-	@media (max-width: 767px) {
-		display: none;
+	/* Tablet */
+	@media (max-width: 1429px) {
+		column-gap: 27px;
 	}
 }
 
 .header-middle__phones {
 	text-align: right;
 	flex-shrink: 0;
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		display: none;
+	}
 }
 
 .header-middle__phone-main {
@@ -84,12 +112,25 @@
 	font-size: 24px;
 	line-height: 1.17;
 
+	/* Tablet */
+	@media (max-width: 1429px) {
+		column-gap: 9px;
+		font-size: 18px;
+		line-height: 1.17;
+	}
+
 	span {
 		display: inline-block;
 		width: 31px;
 		height: 31px;
 		border-radius: 50%;
 		background-color: $accent-color;
+
+		/* Tablet */
+		@media (max-width: 1429px) {
+			width: 20px;
+			height: 20px;
+		}
 	}
 
 	svg {
@@ -100,6 +141,11 @@
 .header-middle__phone-add {
 	font-size: 16px;
 	line-height: 1.19;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		display: none;
+	}
 }
 
 .header-middle__button {
@@ -109,4 +155,25 @@
 	@media (max-width: 1429px) {
 		display: none;
 	}
+}
+
+.header-middle__icons {
+	display: none;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		display: flex;
+		align-items: center;
+		column-gap: 26px;
+
+		li {
+			position: relative;
+		}
+
+		svg {
+			stroke-width: 3;
+		}
+	}
+
+
 }
