--- a/sass/blocks/_nav-icon.scss
+++ b/sass/blocks/_nav-icon.scss
@@ -2,9 +2,15 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 20px;
-	height: 15px;
+	width: 28px;
+	height: 21px;
 	cursor: pointer;
+
+	/* Tablet */
+	@media (max-width: 1429px) {
+		width: 20px;
+		height: 15px;
+	}
 
 	.nav-icon__stripe {
 		position: relative;
