--- a/sass/sections/footer/_footer-bottom.scss
+++ b/sass/sections/footer/_footer-bottom.scss
@@ -8,6 +8,11 @@
 		padding-top: 20px;
 		padding-bottom: 28px;
 	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		padding-bottom: 38px;
+	}
 }
 
 .footer-bottom__row {
@@ -21,6 +26,12 @@
 		flex-direction: column;
 		align-items: flex-start;
 		row-gap: 25px;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		row-gap: 20px;
+
 	}
 }
 
@@ -66,6 +77,13 @@
 	@media (max-width: 1429px) {
 		font-size: 12px;
 	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: unset;
+	}
 }
 
 .footer-bottom__notice {
@@ -92,6 +110,15 @@
 		position: absolute;
 		right: 0;
 		top: 0;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		position: static;
+		right: unset;
+		top: unset;
+		order: -1;
+		padding-bottom: 5px;
 	}
 
 	img {
