--- a/sass/sections/footer/_footer-top.scss
+++ b/sass/sections/footer/_footer-top.scss
@@ -13,6 +13,12 @@
 		padding-top: 30px;
 		padding-bottom: 30px;
 	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		padding-top: 42px;
+		padding-bottom: 37px;
+	}
 }
 
 .footer-top__menu {
@@ -33,6 +39,11 @@
 		row-gap: 15px;
 		max-width: 500px;
 		font-size: 14px;
+	}
+
+	/* Mobile */
+	@media (max-width: 767px) {
+		row-gap: 17px;
 	}
 
 	li {
